<resources>
    <string name="app_name">Available Rentals</string>
    <string name="txtMgmtCompanyName">B &amp; B Properties</string>
    <string name="txtMgmtCompanyAddress">711 E Wardlow #200</string>
    <string name="txtMgmtCompanyCityStateZip">Long Beach, CA 90807</string>
    <string name="txtCityState">Long Beach, CA </string>
    <string name="txtMgmtCompanyPhone">Phone: 562-424-3535</string>
    <string name="txtMgmtCompanyFax">Fax: 562-424-3536</string>
    <string name="imgSpecial">Special offer image</string>
    <string name="txtSpecial">1 month free with 12 month lease</string>
    <string name="txtProperty1Address">1162 E 3rd St</string>
    <string name="txtProperty2Address">908 Molina Ave</string>
    <string name="txtProperty3Address">1075 E Ocean Blvd</string>
    <string name="txtProperty4Address">3225 E 4th St</string>
    <string name="txtProperty5Address">589 Walnut Ave</string>
    <string name="txtProperty1Zip">90802</string>
    <string name="txtProperty2Zip">90804</string>
    <string name="txtProperty3Zip">90802</string>
    <string name="txtProperty4Zip">90814</string>
    <string name="txtProperty5Zip">90802</string>
    <string name="txtProperty1Price">$1250</string>
    <string name="txtProperty2Price">$850</string>
    <string name="txtProperty3Price">$1895</string>
    <string name="txtProperty4Price">$2150</string>
    <string name="txtProperty5Price">3800</string>
    <string name="txtProperty1Bed">studio</string>
    <string name="txtProperty1Bath">1 bath</string>
    <string name="txtProperty2Bed">studio</string>
    <string name="txtProperty2Bath">1 bath</string>
    <string name="txtProperty3Bed">1 bed</string>
    <string name="txtProperty3Bath">1 bath</string>
    <string name="txtProperty4Bed">2 beds</string>
    <string name="txtProperty4Bath">1 bath</string>
    <string name="txtProperty5Bed">3 beds</string>
    <string name="txtProperty5Bath">2 baths</string>
    <string name="btnViewRentals">View Rentals</string>
    <string name="imgLarge">Selected Property Images</string>
    <string name="txtOneMoment">moment to see more...</string>
    <string name="txtClickImage">Click image above to see larger photo</string>
    <string name="btnPrevious">&gt;&gt;- Prev</string>
    <string name="btnNext">Next ->></string>
    <string name="btnRentalCriteria">Rental Criteria</string>
    <string name="txtRentalCriteriaP1">Rental Application and Application Fee ~ Each applicant of legal age must submit a rental application. There is a non-refundable application fee of $36.00 per applicant. Photo I.D. and Social Security Card</string>
    <string name="txtRentalCriteriaP2">A valid government issued photo I.D. and Social Security Card is required to verify applicant’s identity. Income Requirements and Proof of Income</string>
    <string name="txtRentalCriteriaP3">Applicants must provide proof of income with a completed application. Total gross monthly household income must be at least two (2) times the monthly rent amount.</string>
    <string name="txtRentalCriteriaP4">Provide applicable form of:      Pay Stubs (4 most recent, consecutive).     Bank Statements (3 most recent, consecutive).     Official statements of additional income (statement of SSI, disability, child support, I-20 documentation, etc.).     Official Letter of Acceptance or New Hire Contract from Employer showing base salary amount.     1099 or W-2 (2 most recent years)     Tax Returns (2 most recent years)</string>
    <string name="txtRentalCriteriaP5">B &amp; B Property Management will verify applicant’s employment, rental, and credit history, as well as a background check, to process the rental application. NO Evictions or Bankruptcy will be accepted.</string>
    <string name="txtRentalCriteriaP7">Co-signers must qualify for income at three (3) times the monthly rent and have good credit.</string>
    <string name="txtRentalCriteriaP6">Maximum number of occupants allowed for a one-bedroom apartment is 3 people.     Maximum number of occupants allowed for a two-bedroom apartment is 5 people.     Maximum number of occupants allowed for a three-bedroom apartment is 7 people.</string>
    <string name="txtRentalCriteriaT1">Rental Criteria</string>
    <string name="txtRentalCriteriaT2">Employment, Rental, Credit History, and Background Check</string>
    <string name="txtRentalCriteriaT3">Occupancy Standards</string>
    <string name="txtRentalCriteriaT4">Co-signers</string>
    <string name="btnList">Show List</string>
    <string name="btnBadges">Show Badges</string>
    <string name="btnAboutUs">About Us</string>
    <string name="btnEmail">Send Email</string>
    <string name="editTextName">Name</string>
    <string name="editTextEmail">Email@you.com</string>
    <string name="editTextPhone">Phone number</string>
    <string name="editTextMessage">Please add your comments.  We sould love to hear from you.</string>
    <string name="txtEmailConfirmation">Thanks for your email.  We look forward to speaking to you soon!</string>
    <string name="btnOK">OK</string>
</resources>
