<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtMgmtCompanyName"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/txtMgmtCompanyName"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtMgmtCompanyAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:gravity="center"
        android:text="@string/txtMgmtCompanyAddress"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtMgmtCompanyCityStateZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="142dp"
        android:gravity="center"
        android:text="@string/txtMgmtCompanyCityStateZip"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtMgmtCompanyPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        android:text="@string/txtMgmtCompanyPhone"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtMgmtCompanyFax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="307dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        android:text="@string/txtMgmtCompanyFax"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="78dp"
        android:layout_marginLeft="78dp"
        android:layout_marginBottom="21dp"
        android:text="@string/btnAboutUs"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnViewRentalCriteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:layout_marginBottom="104dp"
        android:text="@string/btnRentalCriteria"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="191dp"
        android:layout_marginLeft="191dp"
        android:layout_marginBottom="21dp"
        android:text="@string/btnEmail"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnViewRentals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginBottom="104dp"
        android:text="@string/btnViewRentals"
        android:textSize="16sp" />

</RelativeLayout>