<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentalCriteriaActivity">

    <TextView
        android:id="@+id/titileRentalCriteria"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/txtRentalCriteriaT1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtRentalCriteriaP1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="61dp"
        android:padding="10dp"
        android:text="@string/txtRentalCriteriaP1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtRentalCriteriaP3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="0dp"
        android:padding="10dp"
        android:text="@string/txtRentalCriteriaP3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtRentalCriteriaP2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="194dp"
        android:padding="10dp"
        android:text="@string/txtRentalCriteriaP2"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnRentalCriteria2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/txtRentalCriteriaT2"
        android:textSize="16sp" />

</RelativeLayout>