<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CosignersCriteriaActivity">

    <TextView
        android:id="@+id/titleCosignersCriteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/txtRentalCriteriaT4"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtCosignersCriteriaP1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="617dp"
        android:padding="10dp"
        android:text="@string/txtRentalCriteriaP7"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/titleOccupancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-4dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:text="@string/txtRentalCriteriaT3"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtOccupancyCriteriaP1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="191dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="378dp"
        android:padding="10dp"
        android:text="@string/txtRentalCriteriaP6"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnRentalCriteria2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/txtRentalCriteriaT2"
        android:textSize="16sp" />

</RelativeLayout>