<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmploymentCriteriaActivity">

    <TextView
        android:id="@+id/titleEmploymentCriteria"
        android:layout_width="412dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/txtRentalCriteriaT2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtEmploymentCriteriaP1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="83dp"
        android:padding="10dp"
        android:text="@string/txtRentalCriteriaP4"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtEmploymentCriteriaP2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:padding="10dp"
        android:text="@string/txtRentalCriteriaP5"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnRentalCriteria3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/txtRentalCriteriaT4"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnRentalCriteria1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="59dp"
        android:text="@string/btnRentalCriteria"
        android:textSize="16sp" />

</RelativeLayout>