<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/simpleTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context=".PropertyListActivity">

    <TableRow
        android:id="@+id/rowHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnBadges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBadges"/>
    </TableRow>

    <TableRow
        android:id="@+id/rowProperty1"
        android:layout_width="fill_parent"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/imgProperty1"
            android:contentDescription="@string/txtProperty1Address"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/e3rdst1162livingroom"/>
        <TextView
            android:id="@+id/txtProperty1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="#FF0000"
            android:padding="18dip"
            android:text="@string/txtProperty1Address"
            android:textColor="#000"
            android:textSize="14sp">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button" />
        </TextView>
    </TableRow>

    <TableRow
            android:id="@+id/rowProperty2"
            android:layout_width="fill_parent"
            android:layout_height="100dp">
            <ImageView
                android:id="@+id/imgProperty2"
                android:contentDescription="@string/txtProperty2Address"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/molinaave908livingroom"/>
            <TextView
                android:id="@+id/txtProperty2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="#FF0000"
                android:padding="18dip"
                android:text="@string/txtProperty2Address"
                android:textColor="#000"
                android:textSize="14sp" />
        </TableRow>

    <TableRow
        android:id="@+id/rowProperty3"
        android:layout_width="fill_parent"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/imgProperty3"
            android:contentDescription="@string/txtProperty3Address"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/eoceanblvd1075front"/>
        <TextView
            android:id="@+id/txtProperty3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="#FF0000"
            android:padding="18dip"
            android:text="@string/txtProperty3Address"
            android:textColor="#000"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:id="@+id/rowProperty4"
        android:layout_width="fill_parent"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/imgProperty4"
            android:contentDescription="@string/txtProperty4Address"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/e4thst3225front"/>
        <TextView
            android:id="@+id/txtProperty4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="#FF0000"
            android:padding="18dip"
            android:text="@string/txtProperty4Address"
            android:textColor="#000"
            android:textSize="14sp" />
    </TableRow>

</TableLayout>